final version (i think)

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="container">
                 <div class="project1">
                     <a href="https://amaalabdulle.github.io/accessible-marketing-website/">
-                        <img src="../my-starter-portfolio/starter/images/Screenshot 2023-10-31 at 17.22.23.png" alt="Image of website.">
+                        <img src="../my-starter-portfolio/starter/images/Screenshot 2023-10-31 at 17.22.23.png" alt="Image of my accessible marketing website.">
                     </a>
                         <div class="title">Marketing Website</div>
                 </div>
@@ -69,19 +69,19 @@
                 </div>
                 <div class="projects2">
                     <a href="https://www.netflix.com/gb/">
-                        <img src="../my-starter-portfolio/starter/images/netflix.jpg" alt="Image of Netlix site.">
+                        <img src="../my-starter-portfolio/starter/images/f1.jpg" alt="Image of F1 TV site.">
                     </a>
                         <div class="title">Placeholder</div>
                 </div>
                 <div class="projects2">
                     <a href="https://www.netflix.com/gb/">
-                        <img src="../my-starter-portfolio/starter/images/netflix.jpg" alt="Image of Netlix site.">
+                        <img src="../my-starter-portfolio/starter/images/f1.jpg" alt="Image of F1 TV site.">
                         </a>
                         <div class="title">Placeholder</div>
                 </div>
                 <div class="projects2">
                     <a href="https://www.netflix.com/gb/">
-                        <img src="../my-starter-portfolio/starter/images/netflix.jpg" alt="Image of Netlix site.">
+                        <img src="../my-starter-portfolio/starter/images/f1.jpg" alt="Image of F1 TV site.">
                     </a>
                         <div class="title">Placeholder</div>
                 </div>
