--- a/index.html
+++ b/index.html
@@ -68,19 +68,19 @@
                         <div class="title">Placeholder</div>
                 </div>
                 <div class="projects2">
-                    <a href="https://www.netflix.com/gb/">
+                    <a href="https://f1tv.formula1.com">
                         <img src="../my-starter-portfolio/starter/images/f1.jpg" alt="Image of F1 TV site.">
                     </a>
                         <div class="title">Placeholder</div>
                 </div>
                 <div class="projects2">
-                    <a href="https://www.netflix.com/gb/">
+                    <a href="https://f1tv.formula1.com">
                         <img src="../my-starter-portfolio/starter/images/f1.jpg" alt="Image of F1 TV site.">
                         </a>
                         <div class="title">Placeholder</div>
                 </div>
                 <div class="projects2">
-                    <a href="https://www.netflix.com/gb/">
+                    <a href="https://f1tv.formula1.com">
                         <img src="../my-starter-portfolio/starter/images/f1.jpg" alt="Image of F1 TV site.">
                     </a>
                         <div class="title">Placeholder</div>
